fix overflow problem

--- a/style/modelAtome.css
+++ b/style/modelAtome.css
@@ -122,6 +122,11 @@ hr::after {
     section#content {
         margin-top: 30%;
     } 
+    p.content {
+        font-size: 2.25vh;
+        width: 95vw;
+        margin: 2vh 2.5vw;
+    }
     hr {
         width: 100vw;
         margin-left: 0;
